hello-dima-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dima
  name: hello-dima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dima
  template:
    metadata:
      labels:
        app: dima
    spec:
      containers:
      - image: korgala/hello-dima
        name: hello-dima
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m" 
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
