svc-hello-dima.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dima
  name: svc-hello-dima
spec:
  ports:
  - name: svc-hello-dima
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dima
  type: ClusterIP
