ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /dima
            pathType: Prefix
            backend:
              service:
                name: svc-hello-dima
                port:
                  number: 80

          - path: /world
            pathType: Prefix
            backend:
              service:
                name: svc-hello-world
                port:
                  number: 80
